# Hyprtia

./: PKGBUILD  README.md  THIRD_PARTY_NOTICES.md  meson.build  meson_options.txt
assets/: dev.noctalia.Noctalia.desktop
assets/translations/: en.json  fr.json
packaging/arch/: PKGBUILD
packaging/nyarchassistant/: .SRCINFO  PKGBUILD  README.md  stratos-minimal.patch
packaging/stratos/: brain-shell-hyprlock.conf  config.toml  hyprtia  hyprtia-android-connect  hyprtia-assistant  hyprtia-confined-floats.conf  hyprtia-debug-report  hyprtia-hyprland-session  hyprtia-hyprland-setup  hyprtia-hyprland.conf  hyprtia-hyprland.lua  hyprtia-session-transition  hyprtia-strat  hyprtia.service  safe-mode.toml
src/: main.cpp
src/app/: application.cpp  application.h  application_ui.cpp
src/config/: config_types.h
src/notification/: notification_icon_resolver.cpp  notification_icon_resolver.h  notification_manager.cpp  notification_manager.h  notification_recent_apps.cpp
src/shell/bar/: bar.cpp  bar.h  (+5 more)
src/system/: internal_app_metadata.cpp  package_update_service.cpp  package_update_service.h
tests/: config_schema_roundtrip_test.cpp  config_validate_cli_test.sh  notification_recent_apps_test.cpp  package_update_service_test.cpp  quick_shortcut_entry_test.cpp  stratos_android_connect_test.sh  stratos_assistant_test.sh  stratos_debug_report_test.sh  stratos_hyprland_setup_test.sh  stratos_launcher_test.sh  stratos_safe_mode_test.sh  stratos_session_transition_test.sh  stratos_strat_routing_test.sh  widget_presentation_test.cpp
tests/config_validate/: widget-schema.toml
(+22 files in other folders)
